--- a/index.html
+++ b/index.html
@@ -178,7 +178,8 @@
           <div class="benefits__content">
             <h3 class="benefits__title benefits__title-500">Входная дверь - это вход в ваш дом, поэтому мы серьезно
               относимся к безопасности </h3>
-            <p class="benefits__text benefits__text-500 benefits__text-500_long">Лучшие в отрасли функции безопасности, такие как закаленное
+            <p class="benefits__text benefits__text-500 benefits__text-500_long">Лучшие в отрасли функции безопасности,
+              такие как закаленное
               безопасное стекло, петли и крючки. Для этого наши двери должны были пройти проверку по всем аспектам
               безопасности.</p>
           </div>
@@ -209,7 +210,7 @@
               <a href="#" class="main-btn__link main-btn-benefits__link">Перейти в каталог</a>
               <div class="main-btn__arrow main-btn-benefits__arrow home-btn__arrow">
                 <span class="main-btn__circle main-btn-benefits__circle"></span>
-                </div>
+              </div>
             </div>
           </div>
           <div class="block__col-450">
@@ -227,7 +228,8 @@
       <section class="difference__section">
         <h2 class="section__name">Отличие Expert от китайских дверей</h2>
         <div class="block__row section__row difference__row">
-          <h3 class="benefits__title difference__title safety__title">Сэкономить и купить дешевую дверь китайского производства или
+          <h3 class="benefits__title difference__title safety__title">Сэкономить и купить дешевую дверь китайского
+            производства или
             приобрести добротную конструкцию от российского производителя.</h3>
           <div class="difference__info section__col">
             <p class="block__text difference__text">Чтобы сделать правильный выбор, нужно изучить особенности дверей
@@ -288,7 +290,10 @@
               <p class="section__text">Наполнение дверей</p>
               <span class="accordion__arrow"></span>
             </div>
-            <p>Двери отечественного производства заполняются сертифицированными материалами, прошедшими все необходимые испытательные тесты. Чаще всего используется вспененный полиуретан, базальт или минеральная плита. Эти материалы не пропускают внутрь дома холодный ветер, влагу и шум, обеспечивая надежную защиту. Китайские аналоги часто оказываются «пустотелыми» и в качестве наполнителя можно рассчитывать только на
+            <p>Двери отечественного производства заполняются сертифицированными материалами, прошедшими все необходимые
+              испытательные тесты. Чаще всего используется вспененный полиуретан, базальт или минеральная плита. Эти
+              материалы не пропускают внутрь дома холодный ветер, влагу и шум, обеспечивая надежную защиту. Китайские
+              аналоги часто оказываются «пустотелыми» и в качестве наполнителя можно рассчитывать только на
               гофрокартон, уложенный недостаточно плотно. Все недостатки этого материала можно заметно ощутить в
               холодный сезон года. Дверь не защищает от сквозняков и морозов, пропускает холодный воздух в дом и
               посторонний шум с улицы.</p>
@@ -298,23 +303,35 @@
               <p class="section__text">Дизайн и отделка</p>
               <span class="accordion__arrow"></span>
             </div>
-            <p>Двери китайского производства имеют вполне привлекательный дизайн, но если внимательно присмотреться к полотну, то можно заметить некачественно наложенный рисунок, созданный тонкой полимерной пленкой. При эксплуатации такая дверь быстро теряет привлекательные данные. К тому же, дизайн всех дверей типичен и не уникален.
-              Производители из России выбирают в качестве отделки материалы достойного качества, обладающие устойчивостью к различным воздействиям. Они создают готовому изделию презентабельный внешний вид. Покупатель может выбрать красивое полотно с декоративными элементами из хромированного металла, стекла, зеркальной поверхности или резьбой на деревянной основе. Выбор дизайнерских решений очень большой!</p>
+            <p>Двери китайского производства имеют вполне привлекательный дизайн, но если внимательно присмотреться к
+              полотну, то можно заметить некачественно наложенный рисунок, созданный тонкой полимерной пленкой. При
+              эксплуатации такая дверь быстро теряет привлекательные данные. К тому же, дизайн всех дверей типичен и не
+              уникален.
+              Производители из России выбирают в качестве отделки материалы достойного качества, обладающие
+              устойчивостью к различным воздействиям. Они создают готовому изделию презентабельный внешний вид.
+              Покупатель может выбрать красивое полотно с декоративными элементами из хромированного металла, стекла,
+              зеркальной поверхности или резьбой на деревянной основе. Выбор дизайнерских решений очень большой!</p>
           </li>
           <li class="accordion__item">
             <div class="accordion__item_line">
               <p class="section__text">Срок эксплуатации</p>
               <span class="accordion__arrow"></span>
             </div>
-            <p>Китайские двери характеризуются низким качеством. Соответственно, срок эксплуатации таких конструкций небольшой. Многие называют металлические двери из КНР одноразовыми, что вполне соответствует действительности.
-              Добротные металлические двери из РФ прослужат несколько десятков лет, и даже спустя годы не потеряют своих эксплуатационных качеств. Многие граждане меняют такие двери на новые конструкции, только чтобы сменить уже поднадоевший дизайн, а старые двери, не утратившие вид и свои защитные качества, переустанавливают в другие помещения.</p>
+            <p>Китайские двери характеризуются низким качеством. Соответственно, срок эксплуатации таких конструкций
+              небольшой. Многие называют металлические двери из КНР одноразовыми, что вполне соответствует
+              действительности.
+              Добротные металлические двери из РФ прослужат несколько десятков лет, и даже спустя годы не потеряют своих
+              эксплуатационных качеств. Многие граждане меняют такие двери на новые конструкции, только чтобы сменить
+              уже поднадоевший дизайн, а старые двери, не утратившие вид и свои защитные качества, переустанавливают в
+              другие помещения.</p>
           </li>
           <li class="accordion__item">
             <div class="accordion__item_line">
               <p class="section__text">Как быстро распознать китайскую дверь</p>
               <span class="accordion__arrow"></span>
             </div>
-            <p>Двери китайского производства значительно дешевле по стоимости конструкциям, изготовленным в России. Но так же, как и цена, качество китайских дверей значительно ниже.
+            <p>Двери китайского производства значительно дешевле по стоимости конструкциям, изготовленным в России. Но
+              так же, как и цена, качество китайских дверей значительно ниже.
             </p>
           </li>
           <li class="accordion__item">
@@ -322,17 +339,25 @@
               <p class="section__text">Вывод</p>
               <span class="accordion__arrow"></span>
             </div>
-            <p>Китайские двери не способы защитить дом даже от сквозняков, поэтому рассчитывать на защиту дома от взлома и проникновения воров даже не стоит. Такие двери можно установить в офисе, расположенном на отапливаемом этаже высотного здания, где работает охранная служба. Устанавливать некачественные двери в жилых домах – весьма неразумное решение.
-            <br>
-            <br>
-              Не стоит экономить деньги на покупке столь важной конструкции, основной функцией которой является защита дома. Лучше один раз потратиться, но зато приобрести высококачественную входную металлическую дверь, которая безупречно справится с поставленными задачами и прослужит ни один десяток лет. Выбрать надежную стальную дверь отечественного производителя можно на нашем сайте.</p>
+            <p>Китайские двери не способы защитить дом даже от сквозняков, поэтому рассчитывать на защиту дома от взлома
+              и проникновения воров даже не стоит. Такие двери можно установить в офисе, расположенном на отапливаемом
+              этаже высотного здания, где работает охранная служба. Устанавливать некачественные двери в жилых домах –
+              весьма неразумное решение.
+              <br>
+              <br>
+              Не стоит экономить деньги на покупке столь важной конструкции, основной функцией которой является защита
+              дома. Лучше один раз потратиться, но зато приобрести высококачественную входную металлическую дверь,
+              которая безупречно справится с поставленными задачами и прослужит ни один десяток лет. Выбрать надежную
+              стальную дверь отечественного производителя можно на нашем сайте.
+            </p>
           </li>
         </ul>
       </section>
       <section class="safety__section">
         <h2 class="section__name">Дополнительная безопасность</h2>
         <div class="block__row difference__row">
-          <h3 class="benefits__title difference__title safety__title">Сэкономить и купить дешевую дверь китайского производства или
+          <h3 class="benefits__title difference__title safety__title">Сэкономить и купить дешевую дверь китайского
+            производства или
             приобрести добротную конструкцию от российского производителя.</h3>
           <div class="difference__info section__col-main">
             <p class="block__text safety__text">Чтобы максимально обезопасить вас, мы предлагаем надежные конструкции с
@@ -358,8 +383,23 @@
             <p class="block__text block__text-385">При закрытой двери — штырь входит в отверстие в лутке и, если петли
               будут срезаны — не даст злоумышленнику получить доступ в квартиру (дом), так как у него не будет
               возможности отогнуть дверь.</p>
-            <p class="block__text block__text-more">Подробнее<span
-                class="accordion__arrow accordion__arrow-more"></span></p>
+            <p class="block__text block__text-more">Подробнее
+              <span class="accordion__arrow accordion__arrow-more"></span>
+            </p>
+            <p class="block__text block__text-385 block__more">
+              Штыревой антисрез — это дополнительная система защиты двери, которая не позволяет вскрыть дверь со стороны
+              петель если злоумышленник их срежет.
+              <br><br>
+              При закрытой двери — штырь входит в отверстие в лутке и, если петли будут срезаны — не даст злоумышленнику
+              получить доступ в квартиру (дом), так как у него не будет возможности отогнуть дверь.
+              <br><br>
+              Стандартно такие антисрезы устанавливаются в районе каждой петли, в количестве, соответствующем количеству
+              петель, но при заказе двери можно обговорить установку дополнительных антисрезов — не обязательно только в
+              районе петель. Ведь дверь делается под заказ и все зависит от пожелания заказчика.
+              <br><br>
+              Установка штыревых антисрезов в районе каждой петли — входит во все входные двери и не оплачивается
+              дополнительно.
+            </p>
           </div>
         </div>
         <div class="block__row safety-block__row">
@@ -460,36 +500,36 @@
   <footer class="footer">
     <div class="container">
       <div class="footer__row">
-          <div class="footer__row-top">
-            <a href="index.html" class="footer__logo">Expert</a>
-            <ul class="footer__menu">
-              <li class="footer__menu-item">
-                <a href="catalog.html" class="footer__menu-link">Каталог</a>
-              </li>
-              <li class="footer__menu-item">
-                <a href="" class="footer__menu-link">Как выбрать двери</a>
-              </li>
-              <li class="footer__menu-item">
-                <a href="" class="footer__menu-link">Акции</a>
-              </li>
-              <li class="footer__menu-item">
-                <a href="" class="footer__menu-link">О производителе</a>
-              </li>
-              <li class="footer__menu-item">
-                <a href="" class="footer__menu-link">Карта сайта</a>
-              </li>
-            </ul>
-            <div class="footer__col_right">
-              <a href="tel:+78006666666" class="bottom__link-tel">8 800 666 66 66</a>
-              <p class="footer__text">Бесплатный звонок</p>
-            </div>
+        <div class="footer__row-top">
+          <a href="index.html" class="footer__logo">Expert</a>
+          <ul class="footer__menu">
+            <li class="footer__menu-item">
+              <a href="catalog.html" class="footer__menu-link">Каталог</a>
+            </li>
+            <li class="footer__menu-item">
+              <a href="" class="footer__menu-link">Как выбрать двери</a>
+            </li>
+            <li class="footer__menu-item">
+              <a href="" class="footer__menu-link">Акции</a>
+            </li>
+            <li class="footer__menu-item">
+              <a href="" class="footer__menu-link">О производителе</a>
+            </li>
+            <li class="footer__menu-item">
+              <a href="" class="footer__menu-link">Карта сайта</a>
+            </li>
+          </ul>
+          <div class="footer__col_right">
+            <a href="tel:+78006666666" class="bottom__link-tel">8 800 666 66 66</a>
+            <p class="footer__text">Бесплатный звонок</p>
           </div>
-          <div class="footer__row-bottom">
-            <a href="" class="footer__bottom-link">&copy; Expert 2021 все права защищены</a>
-            <a href="" class="footer__bottom-link">Обработка персональных данных</a>
-            <a href="" class="footer__bottom-link">Политика конфиденциальности</a>
-            <a href="#" class="social__link">Instagtam</a>
-          </div>
+        </div>
+        <div class="footer__row-bottom">
+          <a href="" class="footer__bottom-link">&copy; Expert 2021 все права защищены</a>
+          <a href="" class="footer__bottom-link">Обработка персональных данных</a>
+          <a href="" class="footer__bottom-link">Политика конфиденциальности</a>
+          <a href="#" class="social__link">Instagtam</a>
+        </div>
 
       </div>
     </div>
