--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <div class="header__title">Expert</div>
       <div class="consultation main-btn">
         <a href="#" class="consultation__link main-btn__link">Получить консультацию</a>
-        <div class="arrow main-btn__arrow"><span class="circle circle2"></span></div>
+        <div class="arrow main-btn__arrow"><span class="circle"></span></div>
       </div>
     </div>
     <div class="header__line">
