--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="arrow main-btn__arrow"><span class="circle"></span></div>
       </div>
     </div>
-    <div class="header__line">
+    <div class="header__line header__line-fix">
       <div class="container">
         <div class="header__line-row">
           <div class="line-row__text">Дизайн для любых идей</div>
