--- a/index.html
+++ b/index.html
@@ -17,7 +17,18 @@
 </head>
 
 <body>
-  <header class="header">
+  <div class="preloader" id="page-preloader">
+    <div class="container">
+      <div class="preloder__row">
+        <div class="header__title">Expert</div>
+        <div class="preloader__item">
+          <div class="preloader__text preloader__text1">Производство</div>
+          <div class="preloader__text preloader__text2">Доставка и устновка входных дверей</div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <header class="header" id="header">
     <div class="video-container">
       <div class="fillter"></div>
       <video autoplay loop muted playsinline src="video-bg/Video_1.mp4" class="fillWidth"></video>
