--- a/index.html
+++ b/index.html
@@ -28,21 +28,20 @@
       </div>
     </div>
   </div>
-  <header class="header" id="header">
-    <div class="video-container">
+  <header class="header">
+    <div class="video-container header__hidden" id="header">
       <div class="fillter"></div>
       <video autoplay loop muted playsinline src="video-bg/Video_1.mp4" class="fillWidth"></video>
       <div class="poster hidden">
         <!-- <img src="img/main-bg.jpg" alt=""> -->
       </div>
-
     </div>
     <div class="container container__header">
-      <div class="header__top-row">
+      <div class="header__top-row _anim-items">
         <img src="img/logo.svg" alt="Логотип" class="header__logo">
         <a href="index.html" class="main__link"></a>
         <div class="header__menu">
-          <ul class="header__menu-items"  id="menu">
+          <ul class="header__menu-items" id="menu">
             <div class="menu__close">&#10005;</div>
             <li class="header__menu-item">
               <a href="catalog.html" class="header__menu-link">Каталог</a>
@@ -83,20 +82,21 @@
       </div>
       <div class="header__title">Expert</div>
       <div class="consultation main-btn">
-        <a href="#" class="consultation__link main-btn__link">Получить консультацию</a>
-        <div class="arrow main-btn__arrow"><span class="circle"></span></div>
+        <a href="#" class="consultation__link main-btn__link _anim-items">Получить консультацию</a>
+        <div class="arrow main-btn__arrow _anim-items"><span class="circle _anim-items"></span></div>
       </div>
     </div>
-    <div class="header__line header__line-fix">
+    <div class="header__line header__line-fix _anim-items">
       <div class="container">
         <div class="header__line-row">
-          <div class="line-row__text">Дизайн для любых идей</div>
-          <div class="line-row__text">Европейские материалы</div>
-          <div class="line-row__text">Итальянская фурнитура</div>
-          <div class="line-row__text">Пожизненная гарантия от взлома</div>
+          <div class="line-row__text _anim-items">Дизайн для любых идей</div>
+          <div class="line-row__text _anim-items">Европейские материалы</div>
+          <div class="line-row__text _anim-items">Итальянская фурнитура</div>
+          <div class="line-row__text _anim-items">Пожизненная гарантия от взлома</div>
         </div>
       </div>
     </div>
+
   </header>
   <main class="main">
     <div class="container">
