--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
             </li>
           </ul>
           <div class="help__btn">
+            <div class="help__btn-bg _anim-items"></div>
             <a href="#" class="help__link">Помочь выбрать</a>
             <p class="help__menu menu__btn" id="menuBtn">Меню</p>
           </div>
