update circle anim

--- a/index.html
+++ b/index.html
@@ -110,37 +110,46 @@
           <div class="section__col-main">
             <p class="section__text">Качественные замки и ручки</p>
           </div>
+          <span class="bottom__line1 _anim-items"></span>
         </div>
-        <ul class="section__col-main col__items offer-col__items">
+        <ul class="section__col-main col__items offer-col__items _anim-items">
           <li class="col__item">
             <p class="section__text">Изменение цвета и рисунка фрезеровки</p>
+            <span class="bottom__line"></span>
           </li>
           <li class="col__item">
             <p class="section__text">Замер размеров входной двери </p>
+            <span class="bottom__line"></span>
           </li>
           <li class="col__item">
             <p class="section__text">Доставка</p>
+            <span class="bottom__line"></span>
           </li>
           <li class="col__item">
             <p class="section__text">Демонтаж старой двери</p>
+            <span class="bottom__line"></span>
           </li>
           <li class="col__item">
             <p class="section__text">Установка новой двери</p>
+            <span class="bottom__line"></span>
           </li>
           <li class="col__item">
             <p class="section__text">Заделка швов монтажной пеной</p>
+            <span class="bottom__line"></span>
           </li>
           <li class="col__item">
             <p class="section__text">Уборка мусора</p>
+            <span class="bottom__line"></span>
           </li>
           <li class="col__item">
             <p class="section__text">Утилизация старой двери</p>
+            <span class="bottom__line"></span>
           </li>
         </ul>
         <div class="block__row block__view">
           <div class="section__col-2">
             <div class="block__row block__row-direction">
-              <div class="component">
+              <div class="component _anim-items">
               </div>
               <div class="special-offer__card_small">
                 <div class="special-offer__box_small catalog__box-small">
