animate index done

--- a/index.html
+++ b/index.html
@@ -176,9 +176,9 @@
         </div>
         <div class="block__row block__row-pages">
           <div class="main-btn">
-            <a href="#" class="main-btn__link">Перейти в каталог</a>
-            <div class="main-btn__arrow view-btn__arrow">
-              <span class="main-btn__circle"></span>
+            <a href="#" class="main-btn__link _anim-items">Перейти в каталог</a>
+            <div class="main-btn__arrow view-btn__arrow _anim-items">
+              <span class="main-btn__circle _anim-items"></span>
             </div>
           </div>
           <div class="pages">
@@ -195,7 +195,7 @@
               нужен уникальный дизайн, уникальный цвет и сложное техническое оснащение-Expert с радостью предложит для
               вас решение. </p>
           </div>
-          <div class="benefits__img benefits__img-1"></div>
+          <div class="benefits__img benefits__img-1 _anim-items"></div>
         </div>
         <div class="section__col-2 section__col-450">
           <div class="benefits__content">
@@ -206,7 +206,7 @@
               безопасное стекло, петли и крючки. Для этого наши двери должны были пройти проверку по всем аспектам
               безопасности.</p>
           </div>
-          <div class="benefits__img-500"></div>
+          <div class="benefits__img-500 _anim-items"></div>
         </div>
         <div class="block__row block__row-direction">
           <div class="block__col_right block__row-direction">
@@ -218,7 +218,7 @@
                 специальную отделку вокруг дверной коробки для более аккуратной отделки и предотвращения попадания
                 холодного воздуха и тепла внутрь.</p>
             </div>
-            <div class="benefits__img benefits__img-700"></div>
+            <div class="benefits__img benefits__img-700 _anim-items"></div>
           </div>
         </div>
         <div class="block__row ">
@@ -226,7 +226,7 @@
         </div>
         <div class="block__row block__row-home">
           <div class="block__col-300 block__col-300_reverse">
-            <div class="col-300__img"></div>
+            <div class="col-300__img _anim-items"></div>
             <h4 class="block__title">Для дома</h4>
             <p class="block__text">Теплые двери с терморазрывом, созданы чтобы согревать и радовать эстетикой</p>
             <div class="main-btn main-btn-benefits">
@@ -244,7 +244,7 @@
               <div class="main-btn__arrow main-btn-benefits__arrow"><span
                   class="main-btn__circle main-btn-benefits__circle"></span></div>
             </div>
-            <div class="col-600__img"></div>
+            <div class="col-600__img _anim-items"></div>
           </div>
         </div>
       </section>
@@ -261,8 +261,9 @@
               Мы рассмотрим, в чем различие дверей, сделанных в Китае и в России, на что важно обратить внимание при
               выборе двери, какие проблемы могут возникнуть с китайской входной дверью</p>
           </div>
+          <span class="bottom__line1 _anim-items"></span>
         </div>
-        <ul class="section__col-main col__items accordion__col" id="accordion">
+        <ul class="section__col-main col__items accordion__col _anim-items" id="accordion">
           <li class="accordion__item">
             <div class="accordion__item_line">
               <p class="section__text">Цена</p>
@@ -270,6 +271,7 @@
             </div>
             <p>Двери китайского производства значительно дешевле по стоимости конструкциям, изготовленным в России. Но
               так же, как и цена, качество китайских дверей значительно ниже.</p>
+              <span class="bottom__line"></span>
           </li>
           <li class="accordion__item">
             <div class="accordion__item_line">
@@ -280,6 +282,7 @@
               тяжелые, их вес всегда превышает 50 кг. Толщина металла – не менее 1.5 мм.
               Двери от КНР довольно легкие и тонкие. Их вес часто не превышает 20-30 кг, а толщина металлического листа
               едва дотягивает до 0.5 мм. При нажатии полотно прогибается и пружинится.</p>
+              <span class="bottom__line"></span>
           </li>
           <li class="accordion__item">
             <div class="accordion__item_line">
@@ -289,7 +292,8 @@
             <p>Китайские производители выпускают двери стандартных размеров. У отечественного производителя можно
               приобрести конструкцию любых размеров для установки в дома и квартиры с разными параметрами дверного
               проема.</p>
-          </li>
+              <span class="bottom__line"></span>
+            </li>
           <li class="accordion__item">
             <div class="accordion__item_line">
               <p class="section__text">Надежность запорных устройств</p>
@@ -298,6 +302,7 @@
             <p>В конструкциях от КНР установлены дешевые замки из силумина и других ненадежных материалов. Производители
               РФ выбирают для оснащения входной двери качественные запорные механизмы из высокопрочной латуни или стали.
             </p>
+            <span class="bottom__line"></span>
           </li>
           <li class="accordion__item">
             <div class="accordion__item_line">
@@ -307,6 +312,7 @@
             <p>Фурнитура китайских дверей быстро приходит в негодность и теряет привлекательный вид.
               Российские производители не экономят на столь важных элементах оснащения и комплектуют металлические двери
               качественной фурнитурой с длительной и функциональной работоспособностью.</p>
+              <span class="bottom__line"></span>
           </li>
           <li class="accordion__item">
             <div class="accordion__item_line">
@@ -320,6 +326,7 @@
               гофрокартон, уложенный недостаточно плотно. Все недостатки этого материала можно заметно ощутить в
               холодный сезон года. Дверь не защищает от сквозняков и морозов, пропускает холодный воздух в дом и
               посторонний шум с улицы.</p>
+              <span class="bottom__line"></span>
           </li>
           <li class="accordion__item">
             <div class="accordion__item_line">
@@ -334,6 +341,7 @@
               устойчивостью к различным воздействиям. Они создают готовому изделию презентабельный внешний вид.
               Покупатель может выбрать красивое полотно с декоративными элементами из хромированного металла, стекла,
               зеркальной поверхности или резьбой на деревянной основе. Выбор дизайнерских решений очень большой!</p>
+              <span class="bottom__line"></span>
           </li>
           <li class="accordion__item">
             <div class="accordion__item_line">
@@ -347,6 +355,7 @@
               эксплуатационных качеств. Многие граждане меняют такие двери на новые конструкции, только чтобы сменить
               уже поднадоевший дизайн, а старые двери, не утратившие вид и свои защитные качества, переустанавливают в
               другие помещения.</p>
+              <span class="bottom__line"></span>
           </li>
           <li class="accordion__item">
             <div class="accordion__item_line">
@@ -356,6 +365,7 @@
             <p>Двери китайского производства значительно дешевле по стоимости конструкциям, изготовленным в России. Но
               так же, как и цена, качество китайских дверей значительно ниже.
             </p>
+            <span class="bottom__line"></span>
           </li>
           <li class="accordion__item">
             <div class="accordion__item_line">
@@ -373,6 +383,7 @@
               которая безупречно справится с поставленными задачами и прослужит ни один десяток лет. Выбрать надежную
               стальную дверь отечественного производителя можно на нашем сайте.
             </p>
+            <span class="bottom__line"></span>
           </li>
         </ul>
       </section>
@@ -505,6 +516,7 @@
 
               <div class="callback__tel">Телефон
                 <input type="tel" name="phone" id="#">
+                <span class="callback__tel-line _anim-items"></span>
               </div>
               <p class="personal-data">
                 Нажимая на кнопку отпраить вы соглашаетесь с условиями обработки
