--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
       <div class="header__title">Expert</div>
       <div class="consultation main-btn">
         <a href="#" class="consultation__link main-btn__link _anim-items">Получить консультацию</a>
-        <div class="arrow main-btn__arrow _anim-items"><span class="circle _anim-items"></span></div>
+        <div class="arrow main-btn__arrow _anim-items">
+          <span class="circle _anim-items"></span>
+        </div>
       </div>
     </div>
     <div class="header__line header__line-fix _anim-items">
@@ -97,7 +99,6 @@
         </div>
       </div>
     </div>
-
   </header>
   <main class="main">
     <div class="container">
