--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
       </div>
       <div class="header__title">Expert</div>
       <div class="consultation main-btn">
-        <a href="#" class="consultation__link main-btn__link">Получить консультацию</a>
-        <div class="arrow main-btn__arrow">
-          <span class="circle"></span>
+        <a href="#" class="consultation__link main-btn__link _anim-items">Получить консультацию</a>
+        <div class="arrow main-btn__arrow _anim-items">
+          <span class="circle _anim-items"></span>
         </div>
       </div>
     </div>
